# androidx-driver-samples

./: README.md  settings.gradle.kts
copy-driver/: build.gradle.kts
copy-driver/src/androidTest/kotlin/org/dany/copy/driver/: CopyDriverTest.kt
copy-driver/src/main/kotlin/org/dany/copy/driver/: CopySQLiteDriver.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
logging-driver/: build.gradle.kts
logging-driver/src/androidTest/kotlin/org/dany/logging/driver/: LoggingSQLiteDriverTest.kt
logging-driver/src/main/kotlin/org/dany/logging/driver/: LoggingSQLiteDriver.kt
sample-app/: build.gradle.kts
sample-app/src/main/: AndroidManifest.xml
sample-app/src/main/assets/: secrets.db
sample-app/src/main/kotlin/org/dany/sqlcipher/sample/: SampleActivity.kt  SampleViewModel.kt
sample-app/src/main/kotlin/org/dany/sqlcipher/sample/database/: SecretDatabase.kt
sample-app/src/main/kotlin/org/dany/sqlcipher/sample/ui/theme/: Color.kt  Theme.kt  Type.kt
sqlcipher-driver/: build.gradle.kts
sqlcipher-driver/src/androidTest/kotlin/org/dany/sqlcipher/driver/: SQLCipherDriverTest.kt
sqlcipher-driver/src/main/jni/: CMakeLists.txt  sqlite_bindings.cpp
sqlcipher-driver/src/main/jni/sqlcipher/: CMakeLists.txt
sqlcipher-driver/src/main/kotlin/org/dany/sqlcipher/driver/: SQLCipher.kt  SQLCipherConnection.kt  SQLCipherDriver.kt  SQLCipherInvalidKeyException.kt  SQLCipherStatement.kt
